# visdoc-late-interaction-retrieval

./: .gitignore  .opsx-goal.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.opsx-auto-config/: contract.json  unattended-local.json  validation-policy.json
.opsx-auto-inbox/: phase-1-contract-and-tests.yaml  phase-2-implementation-and-reports.yaml  phase-3-review-and-final-validation.yaml  phase-5d-real-training-backend-wiring.yaml  phase-5i-gated-tiny-real-pilot.yaml
configs/: README.md  dev_only_pilot_eval.json  final_comparison.json  hard_negatives.json  mvp.json  text-baselines-synthetic-smoke.json  train_lora.local.example.json  train_lora_dry_run.json  train_lora_pilot.local.example.json  visual-baselines-synthetic-smoke.json  visual_zero_shot.local.example.json
data/: README.md
docs/: evidence-index.md  final-comparison-protocol.md  interview-talking-points.md  opsx-auto-prerequisites.md  project-card.md  resume-bullets.md
reports/: progress-ledger.yaml  text-baselines-synthetic-smoke.json  visual-baselines-synthetic-smoke.json
scripts/: validate-local-core.sh
tests/: test_a100_preflight.py  test_data_schema.py  test_dev_only_pilot_eval.py  test_final_comparison_gate.py  test_final_comparison_run.py  test_hard_negative_mining.py  test_import.py  test_mvp_retrieval_pipeline.py  test_opsx_auto_prerequisites.py  test_retrieval_metrics_and_report.py  test_split_leakage.py  test_synthetic_corpus.py  test_text_retrieval_baselines.py  test_training_pilot_launch_gate.py  test_training_readiness.py  test_visual_retrieval_baselines.py  (+1 more)
(+292 files in other folders)
