[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visdoc-retrieve"
version = "0.0.0"
description = "Data contracts and synthetic corpus fixtures for visual document retrieval."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "VisDoc-Retrieve Contributors" }
]
dependencies = [
  "PyMuPDF>=1.24,<2",
  "reportlab>=4.2,<5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src"]
show_error_codes = true
pretty = true
